nome do documento

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/menu.css">
     <link rel="stylesheet" href="/css/content.css">
-    <title>Document</title>
+    <title>Projeto.paimon</title>
 </head>
 <body>
     <div id="body">
